--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: khan-academy
-version: 764
+application: khan-netherlands
+version: 1
 runtime: python27
 api_version: 1
 default_expiration: "365d"
