--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: khan-netherlands
-version: 103
+version: test-exercises 
 runtime: python27
 api_version: 1
 default_expiration: "365d"
@@ -100,10 +100,6 @@ handlers:
 - url: /khan-exercises/khan-exercise.js
   static_files: khan-exercises/khan-exercise.js
   upload: khan-exercises/khan-exercise.js
-
-- url: /khan-exercises/khan-exercise-deploy.js
-  static_files: khan-exercises/khan-exercise-deploy.js
-  upload: khan-exercises/khan-exercise-deploy.js
 
 - url: /khan-exercises/jquery-ui.js
   static_files: khan-exercises/jquery-ui.js
