--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,10 +1,25 @@
+# Required to deploy
 ez-setup==0.9
 Django==1.4.2
 Jinja2==2.6
 PyYAML==3.10
 WebOb==0.9
 antlr-python-runtime==3.1.3
-google-appengine==1.5.1
 ipaddr==2.1.10
 itsdangerous==0.17
 webapp2==2.5.2
+
+# Required by unit testing
+coverage==3.5.1
+mock==0.7.2
+unittest2==0.5.1
+unittest-xml-reporting==1.3.2
+webtest==1.3.3
+
+# Required by lint checking
+pep8==1.0.1
+pyflakes==0.5.0
+
+# Required by khan-linter
+python-gflags==2.0
+
