--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ compiled_templates*
 .pydevproject
 deploy/node_modules/*
 tools/node_modules/*
+tools/google_appengine/*
 .settings/org.eclipse.core.resources.prefs
 .tags
 .tags_sorted_by_file
