--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: khan-testing
-version: testing 
+application: khan-netherlands
+version: 46 
 runtime: python27
 api_version: 1
 default_expiration: "365d"
